Adds a filter for non-running pods for ServiceMonitor
Issue: https://github.com/prometheus-operator/prometheus-operator/issues/4877

Problem: on a previous PR the capability to drop metrics from
PodMonitors who's pods were in Failed or Succeded state was introduced.
The same can also be done for ServiceMonitors since if a Service is
backed by a Pod then all labels of the role: pod discovery are attached
as per the documetation on https://prometheus.io/docs/prometheus/latest/configuration/configuration/#endpoints

Solution: Add a step to drop metrics from pods which are in the phase Failed or
Succeeded

Signed-off-by: JoaoBraveCoding <jmarcal@redhat.com>

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -21805,6 +21805,10 @@ spec:
                     enableHttp2:
                       description: Whether to enable HTTP2.
                       type: boolean
+                    filterRunning:
+                      description: 'Drop pods that are not running. (Failed, Succeeded).
+                        Enabled by default. More info: https://kubernetes.io/docs/concepts/workloads/pods/pod-lifecycle/#pod-phase'
+                      type: boolean
                     followRedirects:
                       description: FollowRedirects configures whether scrape requests
                         follow HTTP 3xx redirects.
