--- a/example/prometheus-operator-crd/monitoring.coreos.com_prometheuses.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_prometheuses.yaml
@@ -4326,6 +4326,9 @@ spec:
                 description: Port name used for the pods and governing service. This
                   defaults to web
                 type: string
+              preProvisionRuleConfigMapNumber:
+                description: pre-provision rule number
+                type: integer
               priorityClassName:
                 description: Priority class assigned to the Pods
                 type: string
@@ -8737,6 +8740,8 @@ spec:
                     - keySecret
                     type: object
                 type: object
+            required:
+            - preProvisionRuleConfigMapNumber
             type: object
           status:
             description: 'Most recent observed status of the Prometheus cluster. Read-only.
