--- a/example/prometheus-operator-crd/monitoring.coreos.com_thanosrulers.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_thanosrulers.yaml
@@ -3728,6 +3728,9 @@ spec:
                 description: Port name used for the pods and governing service. This
                   defaults to web
                 type: string
+              preProvisionRuleConfigMapNumber:
+                description: pre-provision rule number
+                type: integer
               priorityClassName:
                 description: Priority class assigned to the Pods
                 type: string
@@ -6391,6 +6394,8 @@ spec:
                   - name
                   type: object
                 type: array
+            required:
+            - preProvisionRuleConfigMapNumber
             type: object
           status:
             description: 'Most recent observed status of the ThanosRuler cluster.
