--- a/bundle.yaml
+++ b/bundle.yaml
@@ -8450,8 +8450,9 @@ spec:
                 description: Minimum number of seconds for which a newly created pod
                   should be ready without any of its container crashing for it to
                   be considered available. Defaults to 0 (pod will be considered available
-                  as soon as it is ready) This is an alpha field and requires enabling
-                  StatefulSetMinReadySeconds feature gate.
+                  as soon as it is ready) This is an alpha field from kubernetes 1.22
+                  until 1.24 which requires enabling StatefulSetMinReadySeconds feature
+                  gate.
                 format: int32
                 type: integer
               nodeSelector:
@@ -16858,8 +16859,9 @@ spec:
                 description: Minimum number of seconds for which a newly created pod
                   should be ready without any of its container crashing for it to
                   be considered available. Defaults to 0 (pod will be considered available
-                  as soon as it is ready) This is an alpha field and requires enabling
-                  StatefulSetMinReadySeconds feature gate.
+                  as soon as it is ready) This is an alpha field from kubernetes 1.22
+                  until 1.24 which requires enabling StatefulSetMinReadySeconds feature
+                  gate.
                 format: int32
                 type: integer
               nodeSelector:
