--- a/example/prometheus-operator-crd-full/monitoring.coreos.com_prometheuses.yaml
+++ b/example/prometheus-operator-crd-full/monitoring.coreos.com_prometheuses.yaml
@@ -4178,8 +4178,8 @@ spec:
                   should be ready without any of its container crashing for it to
                   be considered available. Defaults to 0 (pod will be considered available
                   as soon as it is ready) This is an alpha field from kubernetes 1.22
-                  until 1.24 which requires enabling StatefulSetMinReadySeconds feature
-                  gate.
+                  until 1.24 which requires enabling the StatefulSetMinReadySeconds
+                  feature gate.
                 format: int32
                 type: integer
               nodeSelector:
