Adds Spec.Web.MaxConnections to Prometheus CRD
Issue: https://github.com/prometheus-operator/prometheus-operator/issues/4850

Problem: currently the Prometheus CRD only allows users to configure the
flag web.max-connections using Spec.AdditionalArgs

Solution: introduce dedicated support for the flag under
Spec.Web.MaxConnections

Signed-off-by: JoaoBraveCoding <jmarcal@redhat.com>

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -17242,6 +17242,7 @@ spec:
                   maxConcurrency:
                     description: Number of concurrent queries that can be run at once.
                     format: int32
+                    minimum: 1
                     type: integer
                   maxSamples:
                     description: Maximum number of samples a single query can load
@@ -21371,6 +21372,13 @@ spec:
                           a rolling update will be triggered.
                         type: boolean
                     type: object
+                  maxConnections:
+                    description: Defines the maximum number of simultaneous connections
+                      A zero value means that Prometheus doesn't accept any incoming
+                      connection.
+                    format: int32
+                    minimum: 0
+                    type: integer
                   pageTitle:
                     description: The prometheus web page title
                     type: string
