--- a/example/prometheus-operator-crd-full/monitoring.coreos.com_prometheuses.yaml
+++ b/example/prometheus-operator-crd-full/monitoring.coreos.com_prometheuses.yaml
@@ -5284,9 +5284,7 @@ spec:
                           type: string
                       type: object
                     url:
-                      description: contains all the fields from RemoteWriteSpec except
-                        BearerToken and BearerTokenFile The URL of the endpoint to
-                        send samples to.
+                      description: The URL of the endpoint to send samples to.
                       type: string
                     writeRelabelConfigs:
                       description: The list of remote write relabel configurations.
