--- a/example/prometheus-operator-crd/monitoring.coreos.com_thanosrulers.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_thanosrulers.yaml
@@ -3847,9 +3847,7 @@ spec:
                       pattern: ^(0|(([0-9]+)y)?(([0-9]+)w)?(([0-9]+)d)?(([0-9]+)h)?(([0-9]+)m)?(([0-9]+)s)?(([0-9]+)ms)?)$
                       type: string
                     url:
-                      description: contains all the fields from RemoteWriteSpec except
-                        BearerToken and BearerTokenFile The URL of the endpoint to
-                        send samples to.
+                      description: The URL of the endpoint to send samples to.
                       type: string
                   required:
                   - url
