--- a/example/prometheus-operator-crd-full/monitoring.coreos.com_alertmanagerconfigs.yaml
+++ b/example/prometheus-operator-crd-full/monitoring.coreos.com_alertmanagerconfigs.yaml
@@ -4403,6 +4403,12 @@ spec:
                   the resource's namespace. If present, it will be added to the generated
                   Alertmanager configuration as a first-level route.
                 properties:
+                  activeTimeIntervals:
+                    description: ActiveTimeIntervals is a list of MuteTimeInterval
+                      names when this route should be active.
+                    items:
+                      type: string
+                    type: array
                   continue:
                     description: Boolean indicating whether an alert should continue
                       matching subsequent sibling nodes. It will always be overridden
@@ -8709,6 +8715,12 @@ spec:
                   the resource's namespace. If present, it will be added to the generated
                   Alertmanager configuration as a first-level route.
                 properties:
+                  activeTimeIntervals:
+                    description: ActiveTimeIntervals is a list of TimeInterval names
+                      when this route should be active.
+                    items:
+                      type: string
+                    type: array
                   continue:
                     description: Boolean indicating whether an alert should continue
                       matching subsequent sibling nodes. It will always be overridden
@@ -8769,8 +8781,8 @@ spec:
                       We have to use an alternative type to circumvent the limitation.
                       The downside is that the Kube API can''t validate the data beyond
                       the fact that it is a valid JSON representation. MuteTimeIntervals
-                      is a list of MuteTimeInterval names that will mute this route
-                      when matched,'
+                      is a list of TimeInterval names that will mute this route when
+                      matched.'
                     items:
                       type: string
                     type: array
