--- a/jsonnet/prometheus-operator/alertmanagerconfigs-crd.json
+++ b/jsonnet/prometheus-operator/alertmanagerconfigs-crd.json
@@ -4601,6 +4601,13 @@
                   "route": {
                     "description": "The Alertmanager route definition for alerts matching the resource's namespace. If present, it will be added to the generated Alertmanager configuration as a first-level route.",
                     "properties": {
+                      "activeTimeIntervals": {
+                        "description": "ActiveTimeIntervals is a list of MuteTimeInterval names when this route should be active.",
+                        "items": {
+                          "type": "string"
+                        },
+                        "type": "array"
+                      },
                       "continue": {
                         "description": "Boolean indicating whether an alert should continue matching subsequent sibling nodes. It will always be overridden to true for the first-level route by the Prometheus operator.",
                         "type": "boolean"
