--- a/example/prometheus-operator-crd/monitoring.coreos.com_prometheuses.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_prometheuses.yaml
@@ -2832,12 +2832,6 @@ spec:
                   (`expr`). \n Label name is this field's value. Label value is the
                   namespace of the created object (mentioned above)."
                 type: string
-              enforcedPodTargetLabels:
-                description: EnforcedPodTargetLabels are added to all Pod/ServiceMonitors'
-                  podTargetLabels
-                items:
-                  type: string
-                type: array
               enforcedSampleLimit:
                 description: EnforcedSampleLimit defines global limit on number of
                   scraped samples that will be accepted. This overrides any SampleLimit
@@ -4379,6 +4373,12 @@ spec:
                     type: object
                 type: object
                 x-kubernetes-map-type: atomic
+              podTargetLabels:
+                description: PodTargetLabels are added to all Pod/ServiceMonitors'
+                  podTargetLabels
+                items:
+                  type: string
+                type: array
               portName:
                 description: Port name used for the pods and governing service. This
                   defaults to web
