--- a/example/prometheus-operator-crd/monitoring.coreos.com_prometheuses.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_prometheuses.yaml
@@ -8828,8 +8828,8 @@ spec:
               conditions:
                 description: The current state of the Prometheus deployment.
                 items:
-                  description: PrometheusCondition represents the state of the resources
-                    associated with the Prometheus resource.
+                  description: Condition represents the state of the resources associated
+                    with the Prometheus or Alertmanager resource.
                   properties:
                     lastTransitionTime:
                       description: lastTransitionTime is the time of the last update
@@ -8842,8 +8842,8 @@ spec:
                       type: string
                     observedGeneration:
                       description: ObservedGeneration represents the .metadata.generation
-                        that the condition was set based upon. For instance, if .metadata.generation
-                        is currently 12, but the .status.conditions[x].observedGeneration
+                        that the condition was set based upon. For instance, if `.metadata.generation`
+                        is currently 12, but the `.status.conditions[].observedGeneration`
                         is 9, the condition is out of date with respect to the current
                         state of the instance.
                       format: int64
@@ -8852,7 +8852,7 @@ spec:
                       description: Reason for the condition's last transition.
                       type: string
                     status:
-                      description: status of the condition.
+                      description: Status of the condition.
                       type: string
                     type:
                       description: Type of the condition being reported.
