Enforced pod target labels (#5206)
* Add GlobalPodTargetLabels configuration

* Update generated code

* Rename GlobalPodTargetLabels->EnforcedPodTargetLabels

* Rename EnforcedPodTargetLabels->PodTargetLabels

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -17100,6 +17100,12 @@ spec:
                     type: object
                 type: object
                 x-kubernetes-map-type: atomic
+              podTargetLabels:
+                description: PodTargetLabels are added to all Pod/ServiceMonitors'
+                  podTargetLabels
+                items:
+                  type: string
+                type: array
               portName:
                 description: Port name used for the pods and governing service. This
                   defaults to web
