--- a/example/prometheus-operator-crd-full/monitoring.coreos.com_alertmanagerconfigs.yaml
+++ b/example/prometheus-operator-crd-full/monitoring.coreos.com_alertmanagerconfigs.yaml
@@ -8649,6 +8649,8 @@ spec:
                             type: string
                           sendResolved:
                             type: boolean
+                        required:
+                        - roomID
                         type: object
                       type: array
                     webhookConfigs:
