pkg/apis: Support dropequal and keepequal relabel actions
Fixes #5363

Signed-off-by: Jayapriya Pai <slashpai9@gmail.com>

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -11835,6 +11835,10 @@ spec:
                             - Lowercase
                             - uppercase
                             - Uppercase
+                            - keepequal
+                            - KeepEqual
+                            - dropequal
+                            - DropEqual
                             type: string
                           modulus:
                             description: Modulus to take of the hash of the source
@@ -12015,6 +12019,10 @@ spec:
                             - Lowercase
                             - uppercase
                             - Uppercase
+                            - keepequal
+                            - KeepEqual
+                            - dropequal
+                            - DropEqual
                             type: string
                           modulus:
                             description: Modulus to take of the hash of the source
@@ -12450,6 +12458,10 @@ spec:
                       - Lowercase
                       - uppercase
                       - Uppercase
+                      - keepequal
+                      - KeepEqual
+                      - dropequal
+                      - DropEqual
                       type: string
                     modulus:
                       description: Modulus to take of the hash of the source label
@@ -12671,6 +12683,10 @@ spec:
                               - Lowercase
                               - uppercase
                               - Uppercase
+                              - keepequal
+                              - KeepEqual
+                              - dropequal
+                              - DropEqual
                               type: string
                             modulus:
                               description: Modulus to take of the hash of the source
@@ -12800,6 +12816,10 @@ spec:
                               - Lowercase
                               - uppercase
                               - Uppercase
+                              - keepequal
+                              - KeepEqual
+                              - dropequal
+                              - DropEqual
                               type: string
                             modulus:
                               description: Modulus to take of the hash of the source
@@ -18401,6 +18421,10 @@ spec:
                             - Lowercase
                             - uppercase
                             - Uppercase
+                            - keepequal
+                            - KeepEqual
+                            - dropequal
+                            - DropEqual
                             type: string
                           modulus:
                             description: Modulus to take of the hash of the source
@@ -22484,6 +22508,10 @@ spec:
                             - Lowercase
                             - uppercase
                             - Uppercase
+                            - keepequal
+                            - KeepEqual
+                            - dropequal
+                            - DropEqual
                             type: string
                           modulus:
                             description: Modulus to take of the hash of the source
@@ -22664,6 +22692,10 @@ spec:
                             - Lowercase
                             - uppercase
                             - Uppercase
+                            - keepequal
+                            - KeepEqual
+                            - dropequal
+                            - DropEqual
                             type: string
                           modulus:
                             description: Modulus to take of the hash of the source
