scripts/push-docker-image.sh: add amend option for main tag
Since the 'main' tag is floating, we need to use the '--amend' flag when
creating the manifest.

Signed-off-by: Simon Pasquier <spasquie@redhat.com>

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -25,6 +25,8 @@ jobs:
           go-version: '${{ env.golang-version }}'
       - name: Install cosign
         uses: sigstore/cosign-installer@main
+      - name: Check the Docker version
+        run: docker version
       - name: Check the cosign version
         run: cosign version
       - name: Install crane
