updated documentation files

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -19671,13 +19671,12 @@ spec:
                     pattern: ^(0|(([0-9]+)y)?(([0-9]+)w)?(([0-9]+)d)?(([0-9]+)h)?(([0-9]+)m)?(([0-9]+)s)?(([0-9]+)ms)?)$
                     type: string
                   getConfigInterval:
-                    description: GetConfigInterval is how often the Prometheus config
-                      is fetched. Default 30s.
+                    description: How often to retrieve the Prometheus configuration.
                     pattern: ^(0|(([0-9]+)y)?(([0-9]+)w)?(([0-9]+)d)?(([0-9]+)h)?(([0-9]+)m)?(([0-9]+)s)?(([0-9]+)ms)?)$
                     type: string
                   getConfigTimeout:
-                    description: GetConfigTimeout is the Timeout for getting Prometheus
-                      config. Default 5s.
+                    description: Maximum time to wait when retrieving the Prometheus
+                      configuration.
                     pattern: ^(0|(([0-9]+)y)?(([0-9]+)w)?(([0-9]+)d)?(([0-9]+)h)?(([0-9]+)m)?(([0-9]+)s)?(([0-9]+)ms)?)$
                     type: string
                   grpcListenLocal:
